// bigbookwords/proto/dictionary.proto
syntax = "proto3";

package go.micro.srv.dictionary;

service DictionaryService {
    rpc GetWords(GetRequest) returns (Response) {}
    rpc GetWord(GetRequest) returns (Response) {}
    rpc Search(GetRequest) returns (Response) {}
}

message Word {
    string Id = 1;
    string Word = 2;
    string Definition = 3;
    string Pronounciation = 4;
    int32 Appearances = 5;
}

message GetRequest {
    string Query = 1;
}

message Response {
    Word word = 1;
    repeated Word words = 2;
}